# chimera-quant

./: .env  .gitignore  CMakeLists.txt  backtest.sh  requirements.txt  test_buffer.py  test_phase4.py  train.sh
python/: __init__.py  train_and_backtest.py
python/storage/: cache.py
python/strategies/: app.py  base.py  executor.py  indicators.py  live_data.py  llm_sentiment.py  model.py  news_fetcher.py  sentiment_cache.py
python/weights/: chimeranet_checkpoint.pt
src/bindings/: pybind_wrapper.cpp
src/core/: backtest.cpp  backtest.h  dbn_parser.cpp  dbn_parser.h  types.h
weights/: chimeranet_latest.pt  feature_mean.npy  feature_std.npy
